new data file and add'l calcs

--- a/pyChem.ipynb
+++ b/pyChem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,43 +53,43 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>2957398</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>3733127</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>2900811</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>3010190</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>2810196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>2084063</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <td>6</td>\n",
        "      <td>2812196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <td>7</td>\n",
        "      <td>2830106</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <td>8</td>\n",
        "      <td>2710116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <td>9</td>\n",
        "      <td>2910196</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -110,7 +110,7 @@
        "9  2910196"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "398088.9166369884"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "398088.9166369884"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -196,35 +196,35 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
+       "      <td>count</td>\n",
        "      <td>1.000000e+01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mean</th>\n",
+       "      <td>mean</td>\n",
        "      <td>2.875840e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
+       "      <td>std</td>\n",
        "      <td>3.980889e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
+       "      <td>min</td>\n",
        "      <td>2.084063e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25%</th>\n",
+       "      <td>25%</td>\n",
        "      <td>2.810696e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50%</th>\n",
+       "      <td>50%</td>\n",
        "      <td>2.865458e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75%</th>\n",
+       "      <td>75%</td>\n",
        "      <td>2.945598e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>max</th>\n",
+       "      <td>max</td>\n",
        "      <td>3.733127e+06</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -243,7 +243,7 @@
        "max    3.733127e+06"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -275,16 +275,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#13.8%, not great for an LC method.  We probably need to do a bit more optimization or try and figure out the source of the variability."
+    "#13.8%, not very precise and not great for an LC method.  We probably need to do a bit more optimization or try and figure out the source of the variability."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "(2591064.2443005526, 3160615.555699447)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "9.871925302145497"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,42 +368,44 @@
     "        t_stat = st.t.ppf(1-0.025, deg_free)\n",
     "        err = t_stat*RSD / N**(0.5)\n",
     "        N += 1\n",
-    "        print(f'Error:{err} -- N:{N}')\n",
+    "        print(f'Error:{round(err,1)}% -- N:{N}')\n",
     "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error:9.871925302145497 -- N:11\n",
-      "Error:9.270966148034265 -- N:12\n",
-      "Error:8.76810168512821 -- N:13\n",
-      "Error:8.339256538651178 -- N:14\n",
-      "Error:7.967882779579355 -- N:15\n",
-      "Error:7.642185273592054 -- N:16\n",
-      "Error:7.3535009321796645 -- N:17\n",
-      "Error:7.095305283348754 -- N:18\n",
-      "Error:6.862578549838739 -- N:19\n",
-      "Error:6.651387089000705 -- N:20\n",
-      "Error:6.45859880859475 -- N:21\n",
-      "Error:6.281684687490131 -- N:22\n",
-      "Error:6.118577227857963 -- N:23\n",
-      "Error:5.9675675006420015 -- N:24\n",
-      "Error:5.82722893775957 -- N:25\n",
-      "Error:5.696360030093337 -- N:26\n",
-      "Error:5.573940627650098 -- N:27\n",
-      "Error:5.459098183747245 -- N:28\n",
-      "Error:5.351081375073473 -- N:29\n",
-      "Error:5.249239265495394 -- N:30\n",
-      "Error:5.153004687261778 -- N:31\n",
-      "Error:5.061880866422271 -- N:32\n",
-      "Error:4.975430569524759 -- N:33\n"
+      "Error:9.9% -- N:11\n",
+      "Error:9.3% -- N:12\n",
+      "Error:8.8% -- N:13\n",
+      "Error:8.3% -- N:14\n",
+      "Error:8.0% -- N:15\n",
+      "Error:7.6% -- N:16\n",
+      "Error:7.4% -- N:17\n",
+      "Error:7.1% -- N:18\n",
+      "Error:6.9% -- N:19\n",
+      "Error:6.7% -- N:20\n",
+      "Error:6.5% -- N:21\n",
+      "Error:6.3% -- N:22\n",
+      "Error:6.1% -- N:23\n",
+      "Error:6.0% -- N:24\n",
+      "Error:5.8% -- N:25\n",
+      "Error:5.7% -- N:26\n",
+      "Error:5.6% -- N:27\n",
+      "Error:5.5% -- N:28\n",
+      "Error:5.4% -- N:29\n",
+      "Error:5.2% -- N:30\n",
+      "Error:5.2% -- N:31\n",
+      "Error:5.1% -- N:32\n",
+      "Error:5.0% -- N:33\n"
      ]
     }
    ],
@@ -413,23 +415,293 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Voila, at an N = 33, our relative error of the mean is ~5% with 95% confidence\n",
+    "#If you performed N = 33 measurements over and over, 95% of them would have a relative error less than or equal to 5%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Outliers\n",
+    "#### Outliers in an analytical laboratory can happen for many reasons.  These include: \n",
+    "* Bench technique (analyst technique) when manipulating samples\n",
+    "* Instrument performance (or lack thereof)\n",
+    "* Materials/reagents quality\n",
+    "* The environment (lack of stable temperature, for instance)\n",
+    "* The sample.  Sometimes it just really is high or low.\n",
+    "\n",
+    "#### Below, we'll use some methods to find outliers in a data set of protein concentration readings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Protein Conc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>4.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>10.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>6.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>8.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>4.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>16.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>5.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>4.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>6.38</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "3.9787559717132246"
+       "   Protein Conc\n",
+       "0          4.59\n",
+       "1         10.00\n",
+       "2          6.07\n",
+       "3          4.73\n",
+       "4          8.91\n",
+       "5          4.48\n",
+       "6         16.65\n",
+       "7          5.17\n",
+       "8          4.59\n",
+       "9          6.38"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Voila, at an N = 33, our relative error of the mean is ~5% with 95% confidence\n",
-    "#If you performed N = 33 measurements over and over, 95% of them would have a relative error less than or equal to 5%"
+    "pc_df = pd.read_csv('data/Prot_Conc.csv')\n",
+    "pc_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = pc_df.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### First, a Grubb's test. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Protein Conc    2.289954\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Calculating our G-critical value (we could just look it up...)\n",
+    "#Breaking it up into three pieces so the code isn't as ugly\n",
+    "G_crit_a = (N - 1) / N**0.5\n",
+    "G_crit_b = (st.t.ppf(1-(0.025/N), N - 2))**2\n",
+    "G_crit_c = N - 2 + G_crit_b\n",
+    "G_crit = G_crit_a * (G_crit_b / G_crit_c)**0.5\n",
+    "G_crit\n",
+    "#A standard table yields 2.290 for a data set of N = 10, so looks like we're ok"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   G(α, n) for Grubb’s Test of a Single Outlier              \n",
+      "                                         α⇒  ⇓n   0.05   0.01\n",
+      "0                                             3  1.155  1.155\n",
+      "1                                             4  1.481  1.496\n",
+      "2                                             5  1.715  1.764\n",
+      "3                                             6  1.887  1.973\n",
+      "4                                             7  2.202  2.139\n",
+      "5                                             8  2.126  2.274\n",
+      "6                                             9  2.215  2.387\n",
+      "7                                            10  2.290  2.482\n",
+      "8                                            11  2.355  2.564\n",
+      "9                                            12  2.412  2.636\n",
+      "10                                           13  2.462  2.699\n",
+      "11                                           14  2.507  2.755\n",
+      "12                                           15  2.549  2.755\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Or, just scrape web page with Pandas to get the values.\n",
+    "table = pd.read_html('https://chem.libretexts.org/Ancillary_Materials/Reference/Reference_Tables/Analytic_References/Appendix_07%3A_Critical_Values_for_Grubb%E2%80%99s_Test')\n",
+    "print(table[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Protein Conc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>count</td>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>mean</td>\n",
+       "      <td>7.157000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>std</td>\n",
+       "      <td>3.847681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>min</td>\n",
+       "      <td>4.480000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25%</td>\n",
+       "      <td>4.625000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>50%</td>\n",
+       "      <td>5.620000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>75%</td>\n",
+       "      <td>8.277500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>max</td>\n",
+       "      <td>16.650000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Protein Conc\n",
+       "count     10.000000\n",
+       "mean       7.157000\n",
+       "std        3.847681\n",
+       "min        4.480000\n",
+       "25%        4.625000\n",
+       "50%        5.620000\n",
+       "75%        8.277500\n",
+       "max       16.650000"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Now let's calculate a limit based on our G-critical value\n",
+    "summ_stats = pc_df.describe()\n",
+    "summ_stats"
    ]
   }
  ],
@@ -449,7 +721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
