working on t-test

--- a/pyChem.ipynb
+++ b/pyChem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,16 +539,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f5b85871400>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb6ceee7438>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
        "Name: 6, dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,17 +612,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Protein Conc    2.289954\n",
-       "dtype: float64"
+       "2.28995408447961"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,13 +633,13 @@
     "G_crit_b = (st.t.ppf(1-(0.025/N), N - 2))**2\n",
     "G_crit_c = N - 2 + G_crit_b\n",
     "G_crit = G_crit_a * (G_crit_b / G_crit_c)**0.5\n",
-    "G_crit\n",
+    "G_crit[0]\n",
     "#A standard table (see below) yields 2.290 for a data set of N = 10, so looks like we're ok"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -675,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +750,7 @@
        "max       16.650000"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,14 +763,301 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The limit is 15.97\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Let's calculate our Limit using the G-critical value, the std deviation, and the mean\n",
+    "the_mean = summ_stats.loc['mean'][0]\n",
+    "the_SD = summ_stats.loc['std'][0]\n",
+    "limit = the_SD * G_crit[0] + the_mean\n",
+    "print(f'The limit is {round(limit,2)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#So it is confirmed, our suspected outlier is greater than our limit\n",
+    "print(outlier[0] > limit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparing Variability\n",
+    "\n",
+    "#### We must often measure how method variability compares across sites, analysts, instruments, etc.  One way to do this is an F-test.  Let's evaluate the site-to-site varability of a reference standard impurity peak from a CE (capillary electrophoresis) assay."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#The F-test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "stats.f_oneway(data_group1, data_group2, data_group3, data_groupN)\n",
+    "p_value = scipy.stats.f.cdf(F, df1, df2)\n",
+    "Use the cdf method (cumulative distribution function) available - similar to the FDIST function in Excel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lab_1</th>\n",
+       "      <th>Lab_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1.61</td>\n",
+       "      <td>1.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1.48</td>\n",
+       "      <td>0.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1.71</td>\n",
+       "      <td>1.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1.48</td>\n",
+       "      <td>1.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>1.53</td>\n",
+       "      <td>1.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>1.57</td>\n",
+       "      <td>1.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>1.78</td>\n",
+       "      <td>1.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>1.52</td>\n",
+       "      <td>1.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>1.84</td>\n",
+       "      <td>1.49</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Lab_1  Lab_2\n",
+       "0   1.61   1.55\n",
+       "1   1.48   0.73\n",
+       "2   1.71   1.52\n",
+       "3   1.48   1.56\n",
+       "4   1.53   1.64\n",
+       "5   1.57   1.60\n",
+       "6   1.78   1.61\n",
+       "7   1.52   1.84\n",
+       "8   1.84   1.49"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c_df = pd.read_csv('data/lab_compare2.csv')\n",
+    "c_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lab_1</th>\n",
+       "      <th>Lab_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>count</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>mean</td>\n",
+       "      <td>1.613333</td>\n",
+       "      <td>1.504444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>std</td>\n",
+       "      <td>0.133041</td>\n",
+       "      <td>0.307535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>min</td>\n",
+       "      <td>1.480000</td>\n",
+       "      <td>0.730000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25%</td>\n",
+       "      <td>1.520000</td>\n",
+       "      <td>1.520000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>50%</td>\n",
+       "      <td>1.570000</td>\n",
+       "      <td>1.560000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>75%</td>\n",
+       "      <td>1.710000</td>\n",
+       "      <td>1.610000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>max</td>\n",
+       "      <td>1.840000</td>\n",
+       "      <td>1.840000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Lab_1     Lab_2\n",
+       "count  9.000000  9.000000\n",
+       "mean   1.613333  1.504444\n",
+       "std    0.133041  0.307535\n",
+       "min    1.480000  0.730000\n",
+       "25%    1.520000  1.520000\n",
+       "50%    1.570000  1.560000\n",
+       "75%    1.710000  1.610000\n",
+       "max    1.840000  1.840000"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summ_stat = c_df.describe()\n",
+    "summ_stat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var_1 = (summ_stat['Lab_1']['std'])**2\n",
+    "degF_1 = summ_stat['Lab_1']['count']-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var_2 = (summ_stat['Lab_2']['std'])**2\n",
+    "degF_2 = summ_stat['Lab_2']['count']-1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Protein Conc    15.968012\n",
-       "dtype: float64"
+       "5.343377275580664"
       ]
      },
      "execution_count": 31,
@@ -780,34 +1066,327 @@
     }
    ],
    "source": [
-    "#Let's calculate our Limit using the G-critical value, the std deviation, and the mean\n",
-    "the_mean = summ_stats.loc['mean']\n",
-    "the_SD = summ_stats.loc['std']\n",
-    "limit = the_SD * G_crit + the_mean\n",
-    "limit"
+    "f_stat = var_2/var_1\n",
+    "f_stat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.014463998219417906"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_value = 1 - st.f.cdf(f_stat, degF_1, degF_2)\n",
+    "p_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Taking an alpha of 0.05\n",
+    "alpha = 0.05\n",
+    "#Our p-value is less than our chosen alpha, indicating there may be a significant difference in the variability between the two samples (labs).\n",
+    "print(p_value < alpha)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Why might this be the case?  We would need to investigate and dig into the raw data and assay information to determine what might be creating our bias."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparing Means\n",
+    "\n",
+    "#### We also frequently want to compare the means across different groups.  Maybe two different labs, instruments, or analysts.  For that, we can use a t-test.  With this test we can determine, to some degree, if the means are from the same population.  If so, this will indicate consistency in how the results are being generated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This data set consists of repeat measurements of the same osmolality standard\n",
+    "#The osmolality standard is measured on two different osmometers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Protein Conc    True\n",
-       "dtype: bool"
+       "F_onewayResult(statistic=0.9504205838693713, pvalue=0.34412228739975065)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#So it is confirmed, our suspected outlier is greater than our limit\n",
-    "outlier > limit"
+    "st.f_oneway(c_df['Lab_2'], c_df['Lab_1'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Inst_1</th>\n",
+       "      <th>Inst_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>261</td>\n",
+       "      <td>259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>262</td>\n",
+       "      <td>261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>259</td>\n",
+       "      <td>258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>260</td>\n",
+       "      <td>258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>261</td>\n",
+       "      <td>262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>258</td>\n",
+       "      <td>260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>258</td>\n",
+       "      <td>261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>259</td>\n",
+       "      <td>262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>261</td>\n",
+       "      <td>259</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Inst_1  Inst_2\n",
+       "0     261     259\n",
+       "1     262     261\n",
+       "2     259     258\n",
+       "3     260     258\n",
+       "4     261     262\n",
+       "5     258     260\n",
+       "6     258     261\n",
+       "7     259     262\n",
+       "8     261     259"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inst_df = pd.read_csv('data/inst_compare.csv')\n",
+    "inst_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Inst_1</th>\n",
+       "      <th>Inst_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>count</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>mean</td>\n",
+       "      <td>259.888889</td>\n",
+       "      <td>260.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>std</td>\n",
+       "      <td>1.452966</td>\n",
+       "      <td>1.581139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>min</td>\n",
+       "      <td>258.000000</td>\n",
+       "      <td>258.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25%</td>\n",
+       "      <td>259.000000</td>\n",
+       "      <td>259.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>50%</td>\n",
+       "      <td>260.000000</td>\n",
+       "      <td>260.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>75%</td>\n",
+       "      <td>261.000000</td>\n",
+       "      <td>261.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>max</td>\n",
+       "      <td>262.000000</td>\n",
+       "      <td>262.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Inst_1      Inst_2\n",
+       "count    9.000000    9.000000\n",
+       "mean   259.888889  260.000000\n",
+       "std      1.452966    1.581139\n",
+       "min    258.000000  258.000000\n",
+       "25%    259.000000  259.000000\n",
+       "50%    260.000000  260.000000\n",
+       "75%    261.000000  261.000000\n",
+       "max    262.000000  262.000000"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summ_stat = inst_df.describe()\n",
+    "summ_stat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sd1 = (summ_stat['Inst_1']['std'])**2\n",
+    "mean1 = summ_stat['Inst_1']['mean']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sd2 = (summ_stat['Lab_2']['std'])**2\n",
+    "mean2 = summ_stat['Lab_2']['mean']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
